5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4004/executions/1635_2703.log
== TEST (2019-04-07 21:05:39) 
-- CODE:
y = int(input("idade: "))

if y >= 18:
	print("eleitor")
else y < 18:
	print("nao_eleitor")
-- ERROR:
File "XXXX", line 5
    else y < 18:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:05:59) 
-- CODE:
y = int(input("idade: "))

if y >= 18:
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:06:06) 
-- CODE:
y = int(input("idade: "))

if y >= 18:
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 21:06:12) 
-- CODE:
y = int(input("idade: "))

if y >= 18:
	print("eleitor")
else:
	print("nao_eleitor")
-- EXECUTION TIME:
0.234832
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
